[*] Fix logo size on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -174,7 +174,7 @@ center{
     }
     
     .logo {
-        width: auto;
+        width: 110px;
     }
 
     .logo img {
